--- a/frontend/vue-ecom-app/src/assets/style.css
+++ b/frontend/vue-ecom-app/src/assets/style.css
@@ -58,3 +58,42 @@ body{
     color: black !important;
     text-decoration: none !important; 
 }
+.Icon{
+  padding: 5px;
+  border: 1px solid black;
+  border-radius: 5px ;
+}
+
+.Icon_delete{
+  color: #d62828;
+  border-color: #d62828;
+  transition: .3s;
+  cursor: pointer;
+}
+.Icon_delete:hover{
+    background-color: #d62828;
+    color: white;
+    transition: .3s;
+  }
+  .Icon_update{
+    color: #f77f00;
+    border-color: #f77f00;
+    transition: .3s;
+    cursor: pointer;
+  }
+  .Icon_update:hover{
+      background-color: #f77f00;
+      color: white;
+      transition: .3s;
+    }
+    .Icon_details{
+        color: #003049;
+        border-color: #003049;
+        transition: .3s;
+        cursor: pointer;
+      }
+      .Icon_details:hover{
+          background-color: #003049;
+          color: white;
+          transition: .3s;
+        }
